# TactiFit-AI-PhysTech2026

./: README.md  pyproject.toml  requirements.txt
backend/: __init__.py
backend/tactifit/: __init__.py  api.py  features.py  model.py  schemas.py  sensor_simulator.py
data/: sample_players.json
docs/: architecture.md  testing.md
frontend/: app.js  index.html  style.css
tests/: test_api.py  test_features.py  test_model.py
