[project]
name = "tactifit-ai-phystech2026"
version = "0.1.0"
description = "Real-time football fatigue monitoring prototype for PhysTech 2026"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30"
]

[tool.setuptools]
packages = ["backend", "backend.tactifit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

